--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -376,6 +376,7 @@ button[disabled='disabled'], input[disabled='disabled']{opacity:.5;cursor:not-al
 .product-info .option-item.three-column li{width:192px;}
 .product-info .option-item.four-column li{width:143px;}
 .product-info .option-item.five-column li{width:113px;}
+.product-info .option-item.ui-file .button{height:30px;padding:0 20px;font-size:14px;letter-spacing:1px;}
 .product-info .option-image label{display:block;width:100%;height:100%;}
 .product-info .option-image img{margin-right:5px;border:1px solid #454545;cursor:pointer;}
 .product-info .cart{border-bottom:1px solid #454545;padding:5px 5px;margin:0 0 8px 0;clear:both;overflow:hidden;}
