--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -256,7 +256,7 @@ button[disabled='disabled'], input[disabled='disabled']{opacity:.5;cursor:not-al
 #top #special h1{background:none;font:bold 30px/35px 'Arial';letter-spacing:2px;text-shadow:2px 2px 10px red;-webkit-text-stroke:2px #999;}
 #top #special h2{font:bold 35px/50px 'Arial';color:#FEFB0E;text-align:center;}
 #top #special h3{font:normal 30px/40px 'Arial';text-align:center;text-shadow:2px 2px 10px red;-webkit-text-stroke:2px #999;}
-#curre1{width:252x;height:40px;padding:15px 25px;float:left;clear:both;overflow:hidden;}
+#curre1{width:252px;height:40px;padding:15px 25px;float:left;clear:both;overflow:hidden;}
 #curre1 #currency_tit{width:80px;}
 #curre1 #currency{width:170px;}
 #curre1 #currency select{font:normal 20px/30px '';height:40px;width:168px;padding:6px 0;color:#FFBC02;}
@@ -711,9 +711,11 @@ a.backToTop:hover{background-position:0 -48px;}
 .module-canvas .ui-canvas{width:645px;height:500px;background-color:#fff;border:1px solid #ccc;}
 .module-canvas .ui-canvas canvas{width:100%;height:100%;}
 .module-canvas .ui-list{width:246px;min-height:500px;border:1px solid #ccc;overflow-y:auto;}
-.module-canvas .ui-list li{width:70PX;height:54px;margin:3px;float:left;border:2px solid transparent;transition:border-color .2s;cursor:pointer;}
+.module-canvas .ui-list li{width:70PX;height:54px;margin:3px;float:left;border:2px solid transparent;position:relative;transition:border-color .2s;cursor:pointer;}
+.module-canvas .ui-list li:after{content:'';width:26px;height:26px;border:2px solid #949494;border-bottom-color:transparent;border-radius:100%;display:inline-block;position:absolute;left:20px;top:10px;-webkit-animation:rotate 1.5s 0s linear infinite;animation:rotate 1.5s 0s linear infinite;}
 .module-canvas .ui-list li:hover{border-color:#DC143C;}
 .module-canvas .ui-list li.is-active{border-color:#de0001;}
+.module-canvas .ui-list li img{position:relative;z-index:1;}
 /*-------滚动条整体样式----*/
 .module-canvas .ui-list::-webkit-scrollbar {width:6px;height:6px;}
 /*滚动条里面小方块样式*/
@@ -728,17 +730,8 @@ a.backToTop:hover{background-position:0 -48px;}
 .module-canvas  .cell-upload input{position:absolute;top:0;width:100%;height:22px;opacity:0;cursor:pointer;}
 .module-canvas  .cell-upload input[disabled="disabled"]{cursor:not-allowed;}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@keyframes rotate {
+    0%{-webkit-transform:rotate(0);transform:rotate(0)}
+    50%{-webkit-transform:rotate(180deg);transform:rotate(180deg)}
+    100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}
+}
